Fix modal mask not always covering sticky content

--- a/src/prompts/Modal.scss
+++ b/src/prompts/Modal.scss
@@ -24,6 +24,13 @@
 	justify-content: center;
 	align-items: center;
 
+	/*
+	We want the order of layers to be determined by their position in the dom -- not by
+	arbitrary z-index values. However if we leave this unset, any content below us in
+	dom order, with z will still pop over. So, setting a constant 1 should make this cover that case.
+	*/
+	z-index: 1;
+
 	body.inline-dialog-open & {
 		z-index: 1;
 	}
